# WordChecker

./: CMakeLists.txt  README.md
src/: config.h  config.h.in
src/app/: CMakeLists.txt  main.cxx  window.cxx  window.h
